# confmark

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  flake.nix  install.sh  typos.toml
.github/workflows/: checks.yml  prepare-release.yml  publish-release.yml
docs/: MAPPING.md
src/: ast.rs  confluence.rs  lib.rs  main.rs  markdown.rs
src/confluence/: diagram.rs  parse.rs  render.rs  tests.rs
src/markdown/: parse.rs  render.rs  tests.rs
tests/: integration_test.rs  roundtrip.rs
tests/fixtures/: README.md  admonition-titled.md  admonition-titled.xml  admonitions.md  admonitions.xml  blockquote.xml  code.xml  expand.md  expand.xml  image-attachment.md  image-attachment.xml  image.xml  inline.md  inline.xml  link-anchor.md  link-anchor.xml  link-attachment.md  link-attachment.xml  link-content-id.md  link-content-id.xml  link-page-id.md  link-page-id.xml  link-page.md  link-page.xml  links.md  links.xml  lists.md  lists.xml  mermaid.md  mermaid.xml  panel.md  panel.xml  plantuml.md  plantuml.xml  status.md  status.xml  table.xml  tasklist.xml  toc.md  toc.xml  (+4 more)
